ffplay: Prevent 0/0 aspect from being passed on to lavfi

0/0 fails to be parsed

Fixes Ticket1814
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>